# local-research-assistant

./: .env.example  .gitignore  Dockerfile  README.md  api.py  config.py  db.py  docker-compose.yml  governor.py  ingest.py  logging_utils.py  models.py  pipeline.py  pyproject.toml  research.py  tools.yaml
agents/: critic.py  planner.py  researcher.py  synthesizer.py
notes/: punch-list.md  research-assistant-plan.md
tools/: base.py  graph_rag.py  registry.py  vector_rag.py
ui/: index.html  login.html
ui/static/: app.js  style.css
