[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "research-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ollama",
    "requests",
    "pyyaml",
    "jsonschema",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
py-modules = ["config", "pipeline", "logging_utils", "models", "research"]
packages = ["agents", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
